--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp-less": "^3.1.0",
     "gulp-postcss": "^6.1.1",
     "less": "^2.7.1",
-    "less-loader": "^2.2.3"
+    "less-loader": "^2.2.3",
+    "webpack": "^1.13.1"
   }
 }
