--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
   },
   "homepage": "https://github.com/rvillaverde/cibel#readme",
   "dependencies": {
+    "angular": "^1.5.7",
+    "angular-ui-bootstrap": "^1.3.3",
     "autoprefixer": "^6.3.6",
+    "contentful": "^3.5.0",
     "css-loader": "^0.23.1",
     "cssnano": "^3.7.0",
     "gulp": "^3.9.1",
     "gulp-less": "^3.1.0",
     "gulp-postcss": "^6.1.1",
+    "jquery": "^3.1.0",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
     "webpack": "^1.13.1"
