--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack -p --config webpack.prod.config.js",
+    "dev": "rm -rf ./dist && webpack-dev-server"
   },
   "repository": {
     "type": "git",
@@ -19,16 +20,14 @@
   "dependencies": {
     "angular": "^1.5.7",
     "angular-ui-bootstrap": "^1.3.3",
-    "autoprefixer": "^6.3.6",
     "contentful": "^3.5.0",
     "css-loader": "^0.23.1",
-    "cssnano": "^3.7.0",
-    "gulp": "^3.9.1",
-    "gulp-less": "^3.1.0",
-    "gulp-postcss": "^6.1.1",
+    "extract-text-webpack-plugin": "^1.0.1",
     "jquery": "^3.1.0",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
+    "postcss-loader": "^0.9.1",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.1"
   }
 }
