--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "jquery": "^3.1.0",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
+    "lodash": "^4.13.1",
+    "ngstorage": "^0.3.10",
     "postcss-loader": "^0.9.1",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.1"
