--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/rvillaverde/cibel#readme",
   "dependencies": {
     "angular": "^1.5.7",
+    "angular-marked": "^1.2.1",
     "angular-ui-bootstrap": "^1.3.3",
     "contentful": "^3.5.0",
     "css-loader": "^0.23.1",
@@ -27,6 +28,7 @@
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
     "lodash": "^4.13.1",
+    "marked": "^0.3.5",
     "ngstorage": "^0.3.10",
     "postcss-loader": "^0.9.1",
     "style-loader": "^0.13.1",
