--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "angular": "^1.5.7",
     "angular-marked": "^1.2.1",
     "angular-ui-bootstrap": "^1.3.3",
+    "angular-ui-router": "^0.3.1",
     "contentful": "^3.5.0",
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
